# mipt-build-system-2020

./: README.md
task_1/: CMakeLists.txt
task_1/A/: preparing.py
task_1/B/: CMakeLists.txt  lib.cpp  lib.h
task_1/C/: main.cpp  main_test.cpp
task_2/: solve.md
